--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,48 @@ services:
 
   user-service:
     build: ./user-service
+    image: user-service
+    ports:
+      - 8080:8080
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/user_ifs_db?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     depends_on:
+      - db
       - eureka-server
     networks:
       - my-network
+  
+  db:
+    image: mysql:8.0.32
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: fullstack
 
   interview-feedback-service:
     build: ./interview-feedback-service
+    image: spring-app-interview-feedback
+    ports:
+      - 8081:8081
+    environment:
+      SPRING_DATA_MONGODB_HOST: mongodb
+      SPRING_DATA_MONGODB_PORT: 27017
+      SPRING_DATA_MONGODB_DATABASE: interviewdb
     depends_on:
+      - mongodb
       - eureka-server
     networks:
       - my-network
+  
+  mongodb:
+    image: mongo:latest
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: InterviewFeedback_db
 
 networks:
   my-network:
